==> danielpth/boat/src/boat/remote/RF24/RF24.c <==
#include <atmel_start.h>
#include <string.h>
#include <stdio.h>
#include "nRF24L01.h"
#include "RF24_config.h"
#include "RF24.h"

inline void RF24_csn(bool mode)
{
    if (mode == HIGH) {
        CSN_PORT |= (1<<CSN_PIN);  	// SCK->CSN HIGH
        RF24_delayMicroseconds(100); // allow csn to settle.
    }
    else {
        CSN_PORT &= ~(1<<CSN_PIN);	// SCK->CSN LOW
        RF24_delayMicroseconds(11);  // allow csn to settle
    }
    // Return, CSN toggle complete
    return;
}

inline void RF24_ce(bool level)
{
    if (level == HIGH) {
	    CE_PORT |= (1<<CE_PIN);
	    //RF24_delayMicroseconds(100);
    }
    else {
	    CE_PORT &= ~(1<<CE_PIN);
	    //RF24_delayMicroseconds(11);
    }
    return;
}

unsigned char RF24_read_register(unsigned char regis, unsigned char* buf, unsigned char len)
{
    unsigned char status;

    RF24_beginTransaction();
    status = SPI_transfer(R_REGISTER | (REGISTER_MASK & regis));
    while (len--) {
        *buf++ = SPI_transfer(0xff);
    }
    RF24_endTransaction();

    return status;
}

unsigned char RF24_write_register(unsigned char regis, const unsigned char* buf, unsigned char len)
{
    unsigned char status;

    #if defined(RF24_LINUX)
    RF24_beginTransaction();
    unsigned char * prx = spi_rxbuff;
    unsigned char * ptx = spi_txbuff;
    unsigned char size = len + 1; // Add register value to transmit buffer

    *ptx++ = ( W_REGISTER | ( REGISTER_MASK & regis ) );
    while ( len-- )
      *ptx++ = *buf++;

    SPI_transfernb( (char *) spi_txbuff, (char *) spi_rxbuff, size);
    status = *prx; // status is 1st byte of receive buffer
    RF24_endTransaction();
    #else // !defined(RF24_LINUX)

    RF24_beginTransaction();
    status = SPI_transfer(W_REGISTER | (REGISTER_MASK & regis));
    while (len--) {
        SPI_transfer(*buf++);
    }
    RF24_endTransaction();
    #endif // !defined(RF24_LINUX)

    return status;
}

unsigned char RF24_write_payload(const void* buf, unsigned char data_len, const unsigned char writeType)
{
    unsigned char status;
    const unsigned char* current = buf;

    data_len = rf24_min(data_len, payload_size);
    unsigned char blank_len = dynamic_payloads_enabled ? 0 : payload_size - data_len;

    //printf("[Writing %u bytes %u blanks]",data_len,blank_len);
    printf("[Writing %u bytes %u blanks]\n\r", data_len, blank_len);

    RF24_beginTransaction();
    status = SPI_transfer(writeType);
    while (data_len--) {
        SPI_transfer(*current++);
    }
    while (blank_len--) {
        SPI_transfer(0);
    }
    RF24_endTransaction();

    printf("[Status %x]\n\r", status);

    return status;
}

unsigned char RF24_read_payload(void* buf, unsigned char data_len)
{
    unsigned char status;
    unsigned char* current = buf;

    if (data_len > payload_size) {
        data_len = payload_size;
    }
    unsigned char blank_len = dynamic_payloads_enabled ? 0 : payload_size - data_len;

    //printf("[Reading %u bytes %u blanks]",data_len,blank_len);

    printf("[Reading %u bytes %u blanks]\n", data_len, blank_len);

    #if defined(RF24_LINUX)
    RF24_beginTransaction();
    unsigned char * prx = spi_rxbuff;
    unsigned char * ptx = spi_txbuff;
    unsigned char size;
    size = data_len + blank_len + 1; // Add register value to transmit buffer

    *ptx++ =  R_RX_PAYLOAD;
    while(--size)
        *ptx++ = RF24_NOP;

    size = data_len + blank_len + 1; // Size has been lost during while, re affect

    SPI_transfernb( (char *) spi_txbuff, (char *) spi_rxbuff, size);

    status = *prx++; // 1st byte is status

    if (data_len > 0) {
      while ( --data_len ) // Decrement before to skip 1st status byte
          *current++ = *prx++;

      *current = *prx;
    }
    RF24_endTransaction();
    #else // !defined(RF24_LINUX)

    RF24_beginTransaction();
    status = SPI_transfer(R_RX_PAYLOAD);
    while (data_len--) {
        *current++ = SPI_transfer(0xFF);
    }
    while (blank_len--) {
        SPI_transfer(0xff);
    }
    RF24_endTransaction();

    #endif // !defined(RF24_LINUX)

    return status;
}

bool RF24_begin(void)
{

	unsigned char setup = 0;

	RF24_ce(LOW);
	//RF24_csn(HIGH);
	RF24_endTransaction();
	_delay_ms(200);

    // Must allow the radio time to settle else configuration bits will not necessarily stick.
    // This is actually only required following power up but some settling time also appears to
    // be required after resets too. For full coverage, we'll always assume the worst.
    // Enabling 16b CRC is by far the most obvious case if the wrong timing is used - or skipped.
    // Technically we require 4.5ms + 14us as a worst case. We'll just call it 5ms for good measure.
    // WARNING: Delay is based on P-variant whereby non-P *may* require different timing.

    // Reset NRF_CONFIG and enable 16-bit CRC.
    RF24_write_register1(NRF_CONFIG, _BV(PRIM_RX) | _BV(PWR_UP) | _BV(EN_CRC));
    _delay_ms(5);

#if 1
    // Set 1500uS (minimum for 32B payload in ESB@250KBPS) timeouts, to make testing a little easier
    // WARNING: If this is ever lowered, either 250KBS mode with AA is broken or maximum packet
    // sizes must never be used. See documentation for a more complete explanation.
    RF24_setRetries(5, 15);

    // Reset value is MAX
    //setPALevel( RF24_PA_MAX ) ;


    // check for connected module and if this is a p nRF24l01 variant
    //
    if (RF24_setDataRate(RF24_250KBPS)) {
		printf ("variant\n\r");
        p_variant = true;
    }
    setup = RF24_read_register1(RF_SETUP);
    /*if( setup == 0b00001110 )     // register default for nRF24L01P
    {
      p_variant = true ;
    }*/

    // Then set the data rate to the slowest (and most reliable) speed supported by all
    // hardware.
    //RF24_setDataRate(RF24_1MBPS);

    // Initialize CRC and request 2-byte (16bit) CRC
    //setCRCLength( RF24_CRC_16 ) ;

    // Disable dynamic payloads, to match dynamic_payloads_enabled setting - Reset value is 0
    RF24_toggle_features();
    RF24_write_register1(FEATURE, 0);
    RF24_write_register1(DYNPD, 0);
    dynamic_payloads_enabled = false;

    // Reset current status
    // Notice reset and flush is the last thing we do
    RF24_write_register1(NRF_STATUS, _BV(RX_DR) | _BV(TX_DS) | _BV(MAX_RT));

    // Set up default configuration.  Callers can always change it later.
    // This channel should be universally safe and not bleed over into adjacent
    // spectrum.
    RF24_setChannel(76);

    // Flush buffers
    RF24_flush_rx();
    RF24_flush_tx();
	
	RF24_write_register1(RX_PW_P0, payload_size);

    RF24_powerUp(); //Power up by default when begin() is called

    // Enable PTX, do not write CE high so radio will remain in standby I mode ( 130us max to transition to RX or TX instead of 1500us from powerUp )
    // PTX should use only 22uA of power
    //RF24_write_register1(NRF_CONFIG, (RF24_read_register1(NRF_CONFIG)) & ~_BV(PRIM_RX));

    // if setup is 0 or ff then there was no response from module
#endif
    return (setup != 0 && setup != 0xff);
}

void RF24_startListening(void)
{
    RF24_powerUp();
    RF24_write_register1(NRF_CONFIG, RF24_read_register1(NRF_CONFIG) | _BV(PRIM_RX));
    RF24_write_register1(NRF_STATUS, _BV(RX_DR) | _BV(TX_DS) | _BV(MAX_RT));
    RF24_ce(HIGH);
	
#if 0	
    // Restore the pipe0 adddress, if exists
    if (pipe0_reading_address[0] > 0) {
        RF24_write_register(RX_ADDR_P0, pipe0_reading_address, addr_width);
    } else {
        RF24_closeReadingPipe(0);
    }

    // Flush buffers
    //flush_rx();
    if (RF24_read_register1(FEATURE) & _BV(EN_ACK_PAY)) {
        RF24_flush_tx();
    }
#endif
    // Go!
    //delayMicroseconds(100);
}

void RF24_stopListening(void)
{
    RF24_ce(LOW);

    RF24_delayMicroseconds(txDelay);
/*
    if (RF24_read_register1(FEATURE) & _BV(EN_ACK_PAY)) {
        RF24_delayMicroseconds(txDelay); //200
        RF24_flush_tx();
    }
    //flush_rx();
	*/
    RF24_write_register1(NRF_CONFIG, (RF24_read_register1(NRF_CONFIG)) & ~_BV(PRIM_RX));
/*
    RF24_write_register1(EN_RXADDR, RF24_read_register1(EN_RXADDR) | _BV(child_pipe_enable[0])); // Enable RX on pipe0
*/
    //delayMicroseconds(100);

}

void RF24_powerUp(void)
{
    unsigned char cfg = RF24_read_register1(NRF_CONFIG);

    // if not powered up then power up and wait for the radio to initialize
    if (!(cfg & _BV(PWR_UP))) {
        RF24_write_register1(NRF_CONFIG, cfg | _BV(PWR_UP));

        // For nRF24L01+ to go from power down mode to TX or RX mode it must first pass through stand-by mode.
        // There must be a delay of Tpd2stby (see Table 16.) after the nRF24L01+ leaves power down mode before
        // the CEis set high. - Tpd2stby can be up to 5ms per the 1.0 datasheet
        _delay_ms (5);
    }
}

unsigned char RF24_getDynamicPayloadSize(void)
{
    unsigned char result = 0;

    RF24_beginTransaction();
    SPI_transfer(R_RX_PL_WID);
    result = SPI_transfer(0xff);
    RF24_endTransaction();

    if (result > 32) {
        RF24_flush_rx();
        _delay_ms (2);
        return 0;
    }
    return result;
}

void RF24_openReadingPipe(unsigned char child, const unsigned char* address)
{
    // If this is pipe 0, cache the address.  This is needed because
    // openWritingPipe() will overwrite the pipe 0 address, so
    // startListening() will have to restore it.
    if (child == 0) {
        memcpy(pipe0_reading_address, address, addr_width);
    }
    if (child <= 6) {
        // For pipes 2-5, only write the LSB
        if (child < 2) {
            RF24_write_register(child_pipe[child], address, addr_width);
        } else {
            RF24_write_register(child_pipe[child], address, 1);
        }
        RF24_write_register1(child_payload_size[child], payload_size);

        // Note it would be more efficient to set all of the bits for all open
        // pipes at once.  However, I thought it would make the calling code
        // more simple to do it this way.
        RF24_write_register1(EN_RXADDR, RF24_read_register1(EN_RXADDR) | _BV(child_pipe_enable[child]));

    }
}

void RF24_toggle_features(void)
{
    RF24_beginTransaction();
    SPI_transfer(ACTIVATE);
    SPI_transfer(0x73);
    RF24_endTransaction();
}
