==> BornaBiro/Diplomski_rad/Atollic/Libraries/RF24/Src/RF24.c <==
#include "nRF24L01.h"
#include "RF24_config.h"
#include "RF24.h"

void RF24_csn(uint8_t mode)
{
	HAL_GPIO_WritePin(csn_port, csn_pin, mode);
    HAL_Delay(1);
}

void RF24_ce(uint8_t level)
{
	HAL_GPIO_WritePin(ce_port, ce_pin, level);
	HAL_Delay(1);
}

uint8_t RF24_read_register(uint8_t reg)
{
    uint8_t result;
    uint8_t _dummyReg = 0xff;
    uint8_t _data = R_REGISTER | reg;
    RF24_beginTransaction();
    //status = _SPI->transfer(R_REGISTER | reg);
    //result = _SPI->transfer(0xff);

    HAL_SPI_TransmitReceive(&hspi1, &_data, &status, sizeof(uint8_t), 1000);
    HAL_SPI_TransmitReceive(&hspi1, &_dummyReg, &result, sizeof(uint8_t), 1000);
    RF24_endTransaction();

    return result;
}

void RF24_write_register(uint8_t reg, uint8_t value, uint8_t is_cmd_only)
{
	uint8_t _data = W_REGISTER | reg;
	uint8_t _dummyReg;
    if (is_cmd_only) {
    	RF24_beginTransaction();
    //    status = _SPI->transfer(W_REGISTER | reg);
        HAL_SPI_TransmitReceive(&hspi1, &_data, &status, sizeof(uint8_t), 1000);
        RF24_endTransaction();
    }
    else {
    	RF24_beginTransaction();
    //    status = _SPI->transfer(W_REGISTER | reg);
    //    _SPI->transfer(value);
        HAL_SPI_TransmitReceive(&hspi1, &_data, &status, sizeof(uint8_t), 1000);
        HAL_SPI_TransmitReceive(&hspi1, &value, &_dummyReg, sizeof(uint8_t), 1000);
        RF24_endTransaction();
    }
}

void RF24_write_payload(const void* buf, uint8_t data_len, const uint8_t writeType)
{
    const uint8_t* current = (const uint8_t*)(buf);
    uint8_t _dummyReg[32];
    memset(_dummyReg, 0, 32);

    uint8_t blank_len = !data_len ? 1 : 0;
    if (!dynamic_payloads_enabled) {
        data_len = rf24_min(data_len, payload_size);
        blank_len = payload_size - data_len;
    }
    else {
        data_len = rf24_min(data_len, 32);
    }

    RF24_beginTransaction();
    //status = _SPI->transfer(writeType);
    HAL_SPI_TransmitReceive(&hspi1, &writeType, &status, sizeof(uint8_t), 1000);
    //while (data_len--) {
    //    _SPI->transfer(*current++);
    //}
    HAL_SPI_Transmit(&hspi1, current, data_len, 1000);
    //while (blank_len--) {
    //    _SPI->transfer(0);
    //}
    HAL_SPI_Transmit(&hspi1, _dummyReg, blank_len, 1000);
    RF24_endTransaction();
}

void RF24_read_payload(void* buf, uint8_t data_len)
{
    uint8_t* current = (uint8_t*)(buf);
    uint8_t _dummyReg[32];
    uint8_t _reg;

    uint8_t blank_len = 0;
    if (!dynamic_payloads_enabled) {
        data_len = rf24_min(data_len, payload_size);
        blank_len = payload_size - data_len;
    }
    else {
        data_len = rf24_min(data_len, 32);
    }

    RF24_beginTransaction();
    //status = _SPI->transfer(R_RX_PAYLOAD);
    _reg = R_RX_PAYLOAD;
    HAL_SPI_TransmitReceive(&hspi1, &_reg, &status, sizeof(uint8_t), 1000);
    //while (data_len--) {
    //    *current++ = _SPI->transfer(0xFF);
    //}
    HAL_SPI_Receive(&hspi1, current, data_len, 1000);
    //while (blank_len--) {
    //    _SPI->transfer(0xff);
    //}
    HAL_SPI_Receive(&hspi1, _dummyReg, blank_len, 1000);
    RF24_endTransaction();
}

uint8_t RF24_begin()
{
    RF24_ce(0);
    RF24_csn(1);

    // Must allow the radio time to settle else configuration bits will not necessarily stick.
    // This is actually only required following power up but some settling time also appears to
    // be required after resets too. For full coverage, we'll always assume the worst.
    // Enabling 16b CRC is by far the most obvious case if the wrong timing is used - or skipped.
    // Technically we require 4.5ms + 14us as a worst case. We'll just call it 5ms for good measure.
    // WARNING: Delay is based on P-variant whereby non-P *may* require different timing.
    HAL_Delay(5);

    // Set 1500uS (minimum for 32B payload in ESB@250KBPS) timeouts, to make testing a little easier
    // WARNING: If this is ever lowered, either 250KBS mode with AA is broken or maximum packet
    // sizes must never be used. See datasheet for a more complete explanation.
    RF24_setRetries(5, 15);

    // Then set the data rate to the slowest (and most reliable) speed supported by all
    // hardware.
    RF24_setDataRate(RF24_1MBPS);

    // detect if is a plus variant & use old toggle features command accordingly
    uint8_t before_toggle = RF24_read_register(FEATURE);
    RF24_toggle_features();
    uint8_t after_toggle = RF24_read_register(FEATURE);
    _is_p_variant = before_toggle == after_toggle;
    if (after_toggle){
        if (_is_p_variant){
            // module did not experience power-on-reset (#401)
        	RF24_toggle_features();
        }
        // allow use of multicast parameter and dynamic payloads by default
        RF24_write_register(FEATURE, 0, 0);
    }
    ack_payloads_enabled = 0;     // ack payloads disabled by default
    RF24_write_register(DYNPD, 0, 0);         // disable dynamic payloads by default (for all pipes)
    dynamic_payloads_enabled = 0;
    RF24_write_register(EN_AA, 0x3F, 0);      // enable auto-ack on all pipes
    RF24_write_register(EN_RXADDR, 0, 0);     // close all RX pipes
    RF24_setPayloadSize(32);               // set static payload size to 32 (max) bytes by default
    RF24_setAddressWidth(5);               // set default address length to (max) 5 bytes

    // Set up default configuration.  Callers can always change it later.
    // This channel should be universally safe and not bleed over into adjacent
    // spectrum.
    RF24_setChannel(76);

    // Reset current status
    // Notice reset and flush is the last thing we do
    RF24_write_register(NRF_STATUS, _BV(RX_DR) | _BV(TX_DS) | _BV(MAX_RT), 0);


    // Flush buffers
    RF24_flush_rx();
    RF24_flush_tx();

    // Clear CONFIG register:
    //      Reflect all IRQ events on IRQ pin
    //      Enable PTX
    //      Power Up
    //      16-bit CRC (CRC required by auto-ack)
    // Do not write CE high so radio will remain in standby I mode
    // PTX should use only 22uA of power
    RF24_write_register(NRF_CONFIG, (_BV(EN_CRC) | _BV(CRCO)), 0);
    config_reg = RF24_read_register(NRF_CONFIG);

    RF24_powerUp();

    // if config is not set correctly then there was a bad response from module
    return config_reg == (_BV(EN_CRC) | _BV(CRCO) | _BV(PWR_UP)) ? 1 : 0;
}

void RF24_startListening(void)
{
    config_reg |= _BV(PRIM_RX);
    RF24_write_register(NRF_CONFIG, config_reg, 0);
    RF24_write_register(NRF_STATUS, _BV(RX_DR) | _BV(TX_DS) | _BV(MAX_RT), 0);
    RF24_ce(1);

    // Restore the pipe0 address, if exists
    if (pipe0_reading_address[0] > 0) {
    	RF24_write_registers(RX_ADDR_P0, pipe0_reading_address, addr_width);
    } else {
    	RF24_closeReadingPipe(0);
    }
}

void RF24_stopListening(void)
{
	RF24_ce(0);

    //delayMicroseconds(100);
    //delayMicroseconds(txDelay);
	HAL_Delay(1);
    if (ack_payloads_enabled){
    	RF24_flush_tx();
    }

    config_reg &= ~_BV(PRIM_RX);
    RF24_write_register(NRF_CONFIG, config_reg, 0);

    RF24_write_register(EN_RXADDR, RF24_read_register(EN_RXADDR) | _BV(child_pipe_enable[0]), 0); // Enable RX on pipe0
}

void RF24_powerUp(void)
{
    // if not powered up then power up and wait for the radio to initialize
    if (!(config_reg & _BV(PWR_UP))) {
        config_reg |= _BV(PWR_UP);
        RF24_write_register(NRF_CONFIG, config_reg, 0);

        // For nRF24L01+ to go from power down mode to TX or RX mode it must first pass through stand-by mode.
        // There must be a delay of Tpd2stby (see Table 16.) after the nRF24L01+ leaves power down mode before
        // the CEis set high. - Tpd2stby can be up to 5ms per the 1.0 datasheet
        //delayMicroseconds(RF24_POWERUP_DELAY);
        HAL_Delay(1);
    }
}

uint8_t RF24_getDynamicPayloadSize(void)
{
    uint8_t result = RF24_read_register(R_RX_PL_WID);

    if (result > 32) {
    	RF24_flush_rx();
        HAL_Delay(2);
        return 0;
    }
    return result;
}

void RF24_openReadingPipe(uint8_t child, uint64_t address)
{
    // If this is pipe 0, cache the address.  This is needed because
    // openWritingPipe() will overwrite the pipe 0 address, so
    // startListening() will have to restore it.
    if (child == 0) {
        memcpy(pipe0_reading_address, &address, addr_width);
    }

    if (child <= 5) {
        // For pipes 2-5, only write the LSB
        if (child < 2) {
        	RF24_write_registers(child_pipe[child], (const uint8_t*)(&address), addr_width);
        } else {
        	RF24_write_registers(child_pipe[child], (const uint8_t*)(&address), 1);
        }

        // Note it would be more efficient to set all of the bits for all open
        // pipes at once.  However, I thought it would make the calling code
        // more simple to do it this way.
        RF24_write_register(EN_RXADDR, RF24_read_register(EN_RXADDR) | _BV(child_pipe_enable[child]), 0);
    }
}

void RF24openReadingPipe(uint8_t child, const uint8_t* address)
{
    // If this is pipe 0, cache the address.  This is needed because
    // openWritingPipe() will overwrite the pipe 0 address, so
    // startListening() will have to restore it.
    if (child == 0) {
        memcpy(pipe0_reading_address, address, addr_width);
    }
    if (child <= 5) {
        // For pipes 2-5, only write the LSB
        if (child < 2) {
        	RF24_write_registers(child_pipe[child], address, addr_width);
        } else {
        	RF24_write_registers(child_pipe[child], address, 1);
        }

        // Note it would be more efficient to set all of the bits for all open
        // pipes at once.  However, I thought it would make the calling code
        // more simple to do it this way.
        RF24_write_register(EN_RXADDR, RF24_read_register(EN_RXADDR) | _BV(child_pipe_enable[child]), 0);

    }
}

void RF24_toggle_features(void)
{
	uint8_t _data = ACTIVATE;
	RF24_beginTransaction();
    //status = _SPI->transfer(ACTIVATE);
    //_SPI->transfer(0x73);
    HAL_SPI_TransmitReceive(&hspi1, &_data, &status, sizeof(uint8_t), 1000);
    _data = 0x73;
    HAL_SPI_Transmit(&hspi1, &_data, sizeof(uint8_t), 1000);
    RF24_endTransaction();
}
